# Chess

./: CMakeLists.txt  credits.txt  help.txt  main.cpp
include/First layer/: UserInterface.h
include/Second layer/: Board.h  Content.h
include/Third layer/: Reader.h
src/: main.cpp
src/First layer/: UserInterface.cpp
src/Second layer/: Board.cpp  Content.cpp
src/Third layer/: Reader.cpp
